# TOTP_Authenticator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: base32.cpp  base32.h  main.cpp  storage.cpp  storage.h  totp.cpp  totp.h
